jump fixed

--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 .wrapper {
-    width: calc(100vw - 6px);
-    height: calc(100vh - 6px); 
+    width: 100vw;
+    height: 100vh; 
     left: 0;
     right: 0;
     margin: 0;
@@ -21,7 +21,7 @@ body {
 
 .head {
     position: relative;
-    width: calc(100vw - 12px);
+    width: 100vw;
     height: 10vh;
     left: 0;
     right: 0;
@@ -41,8 +41,8 @@ body {
     right: 0;
     margin: 0;
     padding: 0;
-    width: calc(100vw - 6px);
-    height: calc(85vh - 15px);
+    width: 100vw;
+    height: 85vh;
 }
 
 .add-button {
@@ -77,7 +77,7 @@ body {
     display: flex;
     flex-direction: row;
     position: relative;
-    width: calc(100% - 6px);
+    width: 100%;
     height: 5%;
     left: 0;
     right: 0;
@@ -91,7 +91,7 @@ body {
     margin-left: 2px;
     margin-top: 5px;
     background: lightslategray;
-    width: calc(8vw - 5px);
+    width: 8vw;
     height: 3vh;
     border: 3px solid gray;
     background: ivory;
